@@ -282,7 +282,7 @@ Using FTP server library with the default `DummyAuthorizer` means that password 
 The most common way to do things in such case would be first creating new users and then storing their usernames + passwords as hash digests into a file or wherever you find it convenient.
 
 The example below shows how to easily create an encrypted account storage system by storing passwords as one-way hashes by using md5 algorithm.
-This could be easily done by using the *md5* module included with Python stdlib and by sub-classing the original `DummyAuthorizer` class overriding its `validate_authentication()` method:
+This could be easily done by using the *hashlib* module included with Python stdlib and by sub-classing the original `DummyAuthorizer` class overriding its `validate_authentication()` method:
 
 {{{
 #!/usr/bin/env python
@@ -291,8 +291,12 @@ This could be easily done by using the *md5* module included with Python stdlib 
 """A basic ftpd storing passwords as hash digests (platform independent).
 """
 
-import md5
 import os
+try:
+    from hashlib import md5
+except ImportError:
+    # backward compatibility with Python < 2.5
+    from md5 import new as md5
 
 from pyftpdlib import ftpserver
 
@@ -300,12 +304,12 @@ from pyftpdlib import ftpserver
 class DummyMD5Authorizer(ftpserver.DummyAuthorizer):
 
     def validate_authentication(self, username, password):
-        hash = md5.new(password).hexdigest()
+        hash = md5(password).hexdigest()
         return self.user_table[username]['pwd'] == hash
 
 if __name__ == "__main__":
     # get a hash digest from a clear-text password
-    hash = md5.new('12345').hexdigest()
+    hash = md5('12345').hexdigest()
     authorizer = DummyMD5Authorizer()
     authorizer.add_user('user', hash, os.getcwd(), perm='elradfmw')
     authorizer.add_anonymous(os.getcwd())
